# symplyphysics

./: .gitignore  .style.yapf  1.txt  AGENTS.md  LICENSE  README.md  The_Law_of_Refraction_of_Light.py  The_Law_of_Refraction_of_Light_Test.py  bagyshan.md  buoyant_force_from_volume_and_density.py  docs.bat  docs.sh  kinetic_energy  maximum_height_from_velocity_test.py  potential_energy  pylintrc  pyproject.toml  setup.py  unique_law_id.json
.github/workflows/: ci.yml  deploy.yml
docs/: build.py  conf.py  definitions.rst  index.rst  laws.rst  parse.py  symbols.rst  view.py
docs/templates/: autosummary.rst  autosummary_header.rst
examples/acceleration_from_force/: main.py
examples/acceleration_from_speed_difference/: main.py
examples/acceleration_is_velocity_derivative/: main.py
examples/chemistry/: determine_the_solubility_of_the_salt.py
examples/dynamics/: absolutely inelastic collision.py  absolutely inelastic_collision.py  absolutely_inelastic_collision.py  acceleration_from_force — копия.py  acceleration_from_force.py  average_air_resistance_during_flight.py  body_landing_speed.py  braking_path_after_collision.py  earth_gravity_acceleration.py  ideal_pendulum_period.py  lennard_jones_potential_equilibrium_separation.py  maximum_overhang_of_stacked_bricks.py  measuring_acceleration_due_to_gravity.py  oscillations_of_block_connected_to_two_springs.py  pendulum_period.py  potential_energy_from_mass_and_height.py  rotating_pendulum.py  rotational_energy_of_rotor.py  shot_at_an_angle_to_the_horizon.py  simple_harmonic_oscillations_of_spring.py  thin_rod_as_conical_pendulum.py  throwing_while_standing_on_the_ice.py  traction_force_and_drag_force.py
symplyphysics/: __init__.py  expr_to_quantity.py  fields.py  filters.py  probability.py  quantity_decorator.py  vectors.py
symplyphysics/core/: approx.py  (+14 more)
test/: fields_test.py  test_decorators.py  vectors_test.py
(+6699 files in other folders)
